@@ -309,7 +309,7 @@ BEGIN
     IDS_MENUDESCAPPLYPATCH  "Applies a unified diff file to the working copy"
     IDS_MENUMERGEALL        "Merge reintegrate..."
     IDS_MENUDESCMERGEALL    "Merges all missing revisions back into the working copy using merge-tracking information"
-    IDS_MENUUNDOADD         "Undo Add.."
+    IDS_MENUUNDOADD         "Undo Add..."
     IDS_MENUDESCUNDOADD     "Reverts an addition to version control"
     IDS_MENUPREVDIFF        "&Diff with previous version"
     IDS_MENUDESCPREVDIFF    "Diffs the working copy file with the one before the last commit."
